--- a/unit_3/css/style3.css
+++ b/unit_3/css/style3.css
@@ -1,5 +1,7 @@
-body {
+* {
  	margin: 0;
+ 	padding:0;
+ 	box-sizing:border-box;
 }
 
 
@@ -17,33 +19,31 @@ body {
 
  
 .begin {
-	text-align: center; 
-	background-image: url(images/background.jpg);
+	text-align: center;
+	background-image: url(../images/background.JPG);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: scroll;
-	margin: 4%;
+	padding: 10%;
+	/* height: 100vh; */
 }
-			h1 {
-				color: rgb(0,0,0);
-				font-size: 270%;
-				text-transform: uppercase;
-				font-family: Franklin Gothic; monospace;
-			}
-			#subtext {
-				color: rgb(0,0,0);
-				font-size: 130%;
-				font-style: italic;
-				font-family: Lucida Calligraphy; monospace;
-				padding-top: 1.5%;
-				padding-bottom: 5%;
-			}
-			#explore {
-				text-transform: uppercase;
-			}
-
-
-
+h1 {
+	color: rgb(0,0,0);
+	font-size: 270%;
+	text-transform: uppercase;
+	font-family: Franklin Gothic; monospace;
+}
+#subtext {
+	color: rgb(0,0,0);
+	font-size: 130%;
+	font-style: italic;
+	font-family: Lucida Calligraphy; monospace;
+	padding-top: 1.5%;
+	padding-bottom: 5%;
+}
+#explore {
+	text-transform: uppercase;
+}
 .navigation {
 	text-align: right;
 	background-color: rgb(120,120,120);
@@ -51,13 +51,13 @@ body {
 	margin: 100 px;
 	font-family: Franklin Gothic; monospace;
 }
-			.p {
-				color: rgb(255,255,255);
-				font-size: 40 px;
-				font-family: Franklin Gothic; monospace;
-				text-decoration: none;
-				padding: 1%;
-			 }
+nav a {
+	color: rgb(255,255,255);
+	font-size: 40 px;
+	font-family: Franklin Gothic; monospace;
+	text-decoration: none;
+	padding: 1%;
+}
 
 
 #quote {
@@ -86,9 +86,9 @@ body {
 }
 			 img  {
 			 	height: auto;
-			 	width: 40%;
-			 	padding: 0.5%;
-			 	text-align: center;
+			 	width: 50%;
+			 	padding: .25em;
+			 	float: left;
 			 }
 	
 	
@@ -133,26 +133,28 @@ body {
 
 
 .service {
- 	text-align: justify;
  	color: rgb(0,0,0);
  	background-color: rgb(230,230,230);
- 	padding-bottom: 2%;
- 	padding-top: 2%;
+ 	padding: 4em 0;
+ 	/* width: 600px; */
+ 	margin: auto;
+ 	text-align: center;
+}
+.service div {
+	margin:auto;
+	width:600px;
 }
 			#ps {
-				font-family: Franklin Gothic; monospace;
-				padding-left: 20%;
-				padding-right: 20%;
-				padding-bottom: 4%;
-			 	text-transform: uppercase;
-				font-family: Franklin Gothic; monospace;
-				font-size: 200%;
+				monospace;
+				text-transform: uppercase;
+				font-family: Franklin Gothic;
+				monospace;
+				font-size: 2em;
 			}
 			.list {
 				font-style: italic;
-				font-family: Lucida Calligraphy; monospace;
-				padding-left: 20%;
-				padding-right: 20%;
+				font-family: Lucida Calligraphy;
+				monospace;
 				font-size: 110%;
 			}
 
